--- a/QT-host-controller/UI/main_ui.ui
+++ b/QT-host-controller/UI/main_ui.ui
@@ -212,7 +212,20 @@
                </widget>
               </item>
               <item>
-               <widget class="QTextBrowser" name="Debug_Text"/>
+               <widget class="QTextBrowser" name="Debug_Text">
+                <property name="font">
+                 <font>
+                  <pointsize>8</pointsize>
+                 </font>
+                </property>
+                <property name="html">
+                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
@@ -238,7 +251,7 @@
                 <string>阿卡曼模式</string>
                </property>
                <property name="checked">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
               </widget>
              </item>
@@ -246,6 +259,9 @@
               <widget class="QRadioButton" name="radioButton_2">
                <property name="text">
                 <string>自旋模式</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
@@ -305,7 +321,7 @@
      <x>0</x>
      <y>0</y>
      <width>1138</width>
-     <height>23</height>
+     <height>28</height>
     </rect>
    </property>
   </widget>
